# adventofcode

./: .gitignore  Cargo.toml  README.md  adventofcode.slnx  download_input.py
2015/day03/: testData.txt
2015/day11/: testData.txt
2015/day12/: testData2.txt
2015/day19/: longerTestInput.txt  testData.txt  testInput.txt
2015/day21/: Program.cs
2015/day22/: Boss.cs  Player.cs  Program.cs  Spells.cs
2015/day23/: Program.cs
2015/day24/: Program.cs
2015/day25/: Program.cs  testData.txt
2015/day3/: testData.txt
2015/day7/: testData.txt
2016/day1/: testData.txt
2016/day4/: testData2.txt
2017/: Cargo.toml
2017/day09/: problemData.txt  testData.txt
2017/day10/: testData2.txt
2017/day3/: testData.txt
2017/src/: main.rs
2018/: Cargo.toml
2018/day04/: Cargo.toml
2018/day09/: LinkedListNode.cs  Program.cs  ProgramTest.cs
2018/day10/: Cargo.toml
2018/day12/: problemData.txt
2018/day13/: Cargo.toml
2018/day14/: Cargo.toml
2018/day16/: testData.txt
2018/day17/: Cargo.toml
2018/day18/: problemData.txt
2018/day19/: problemData.txt
2018/day5/: testData.txt
2018/src/: lib.rs  main.rs
2019/: Cargo.toml
2019/day02/: testData.txt
2019/day03/: testData.txt
2019/day04/: testData.txt  testData2.txt
2019/day05/: testData3.txt
2019/day14/: problemData.txt
2019/day15/: problemData.txt
2019/day16/: problemData.txt
2019/day18/: problemData.txt
2019/day19/: problemData.txt
2019/day20/: problemData.txt
2020/: Program.cs  aoc2020.csproj
2021/: go.mod  main.go
2025/: Cargo.toml
src/: main.rs  years.rs
(+553 files in other folders)
